# miragedemo

bobs/: CMakeLists.txt  fotoalbum.rc  readme.txt
bobs/src/: demo.cpp
devcpp/: Makefile.win  miragedemo.dev
